--- a/package.json
+++ b/package.json
@@ -10,21 +10,26 @@
     "start": "node server/index.js",
     "dev": "nodemon server/index.js",
     "build": "npm run build-client",
-    "build-client": "cp -r src/* public/"
+    "build-client": "cp -r src/* public/",
+    "postinstall": "npm rebuild"
   },
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.787.0",
-    "@aws-sdk/lib-dynamodb": "^3.787.0",
-    "better-sqlite3": "^8.5.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "^4.18.2",
-    "nanoid": "^3.3.4",
-    "node-cache": "^5.1.2",
-    "qrcode": "^1.5.4",
-    "socket.io": "^4.7.2"
+    "@aws-sdk/client-dynamodb": "3.787.0",
+    "@aws-sdk/lib-dynamodb": "3.787.0",
+    "better-sqlite3": "8.5.0",
+    "cors": "2.8.5",
+    "dotenv": "16.5.0",
+    "express": "4.18.2",
+    "express-router": "0.0.1",
+    "nanoid": "3.3.4",
+    "node-cache": "5.1.2",
+    "qrcode": "1.5.4",
+    "socket.io": "4.7.2"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "3.0.1"
+  },
+  "overrides": {
+    "express": "4.18.2"
   }
 }
