Fix: UIChange/display

--- a/render.yaml
+++ b/render.yaml
@@ -2,9 +2,11 @@ services:
   - type: web
     name: wedding-quiz-app
     env: node
-    buildCommand: npm install
+    buildCommand: npm ci --omit=dev --no-audit
     startCommand: node server/index.js
     envVars:
+      - key: NODE_OPTIONS
+        value: "--max-old-space-size=512"
       - key: NODE_ENV
         value: production
       - key: AWS_ACCESS_KEY_ID
